<resources>
    <string name="app_name">PolyFinder</string>
    <string name="logo">logo</string>
    <string name="email">Введите ваш почтовый ящик</string>
    <string name="input_name">Введите имя</string>
    <string name="input_password">Введите пароль</string>
    <string name="rewrite_password">Повторите пароль</string>
    <string name="write_password">Введите пароль</string>
    <string name="registered">Зарегистрироваться</string>
    <string name="sign_in">Войти</string>
    <string name="forget_password">Забыл\nпароль</string>
    <string name="create_account">Создать\nаккаунт</string>
    <string name="sign_in_account">Войти в аккаунт</string>
    <string name="found">Найдено:</string>
    <string name="message">message</string>
    <string name="search">search</string>
    <string name="profile">profile</string>
    <string name="publich_request">ОПУБЛИКОВАТЬ ЗАЯВКУ</string>
    <string name="swipe_to_left">Что-то потеряли? Свайпните влево</string>
    <string name="what_you_found">Что вы нашли?</string>
    <string name="describe_item">Опишите найденный предмет\n(128 символов):</string>
    <string name="swipe_lost">Что-то потеряли? Свайпните влево</string>
    <string name="what_did_you_lose">Что вы потеряли?</string>
    <string name="do_you_found">Вы нашли предмет? Свайпните вправо</string>
    <string name="describe_lost">Опишите потерянный предмет\n(128 символов):</string>
    <string name="only_lost">Only Lost</string>
    <string name="only_found">Only Found</string>
    <string name="item_type">Type item</string>
    <string name="communicate_in_chat">Communicate in chat</string>
    <string name="telephone">+7854342344</string>
    <string name="user_name">Misha Usov</string>
    <string name="title">VLAD</string>
    <string name="logout">Выйти</string>
    <string name="settings">Настройки</string>
    <string name="do_filter">do_filter</string>
    <string name="create_request_swipe_right">Create Request? Swipe right</string>
    <string name="input_message_field">Message...</string>

    <dimen name="image_width">120dp</dimen>
    <dimen name="image_final_width">32dp</dimen>
    <dimen name="spacing_normal">16dp</dimen>

    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus. Pellentesque ut dolor a dui porttitor porta lacinia non libero. Nunc volutpat arcu quis quam convallis molestie. Etiam ac tristique sem, id commodo justo. Phasellus congue tincidunt lectus, at dignissim ligula maximus eu. Quisque interdum nunc eget tellus bibendum suscipit. Phasellus feugiat ultricies posuere. Nullam porta accumsan velit, ut rutrum massa fermentum eu. Nunc ac bibendum nunc. Mauris eu ultricies ipsum. Ut id dolor dui. Pellentesque dictum dui vel tempus maximus. Vivamus non nisi quis libero scelerisque pretium. Ut eu tristique justo. Sed pellentesque placerat quam, ut ultricies turpis feugiat a. Aliquam a volutpat risus.

Praesent at lectus semper, suscipit elit in, facilisis massa. Phasellus sed vestibulum ante, a euismod sem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin tincidunt orci augue, a porta odio lacinia eu. Nunc in congue risus. Maecenas commodo nibh ac enim fermentum, eu sagittis massa blandit. Vestibulum elementum massa nec dapibus mollis. Etiam porta, est sit amet aliquet porta, odio elit finibus risus, id rutrum purus mi non ipsum. Nulla viverra nec enim sed venenatis.

Maecenas mattis, erat et viverra euismod, neque diam porttitor tellus, in fringilla metus est id augue. Nunc at metus cursus, porttitor nisi vitae, congue diam. Curabitur ligula massa, ullamcorper eget scelerisque vel, pharetra ac sapien. Ut auctor luctus ultricies. Nullam semper tortor ac elementum luctus. In et tempus ex. Praesent sodales, dolor id volutpat elementum, ligula enim euismod odio, maximus sodales magna neque nec neque. Curabitur pretium nisl neque, consequat aliquet dui tincidunt ac. Vivamus augue nunc, aliquet eu ex a, ultrices aliquam lorem. Duis nibh lectus, ultricies vel iaculis sit amet, imperdiet id sapien. Duis scelerisque sodales metus eu rutrum. Suspendisse posuere nisi ac magna consequat, eu vestibulum ipsum venenatis. Suspendisse auctor nisi nec leo venenatis tristique.

Praesent tincidunt lorem sit amet mi consequat cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent vitae blandit sapien. Curabitur est sapien, lobortis sit amet facilisis vel, faucibus eu quam. Nam tempus libero at tellus tempor laoreet. Pellentesque quam lorem, tincidunt in molestie eget, dictum vel risus. Nunc gravida convallis mattis.
    </string>
    <string name="your_requests">Your Requests</string>
    <string name="swipe_on_left_or_right_n_to_delete_request">Swipe on left or right  to delete request</string>

    <string name="upload_photo_from_gallery">Upload photo from gallery</string>
    <string name="take_photo">Take photo</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="choose_photo">Choose photo</string>
    <string name="type">Type</string>
    <string name="lost">Потеряно:</string>
</resources>
