<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@android:color/transparent"
    android:layout_height="250dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/request_photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="5dp"
        app:border_width="5dp"
        app:border_color="@color/request_end" />

    <View
        android:layout_height="250dp"
        android:layout_width="match_parent"
        android:id="@+id/gradient"
        android:background="@drawable/profile_gradient">
    </View>

    <ImageView
        android:layout_width="25dp"
        android:layout_height="15dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/down_arrow"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/request_photo"
        android:textAlignment="viewEnd"
        android:maxLines="1"
        android:maxLength="25"
        android:layout_alignParentEnd="true"
        android:text="@string/title"
        android:textSize="22sp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_toEndOf="@id/request_photo"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:layout_above="@id/user_data"
        android:maxLines="10"
        android:text="fioewifioejfoweifewfewojfeowejfowefojewfwejwejfeowfjewofweofwoefejowwioejfwifjeowf"
        android:textColor="@color/bg_edit_text" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:id="@+id/user_data"
        android:layout_alignBottom="@id/gradient">

        <ImageView
            android:id="@+id/user_photo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/profile_request_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/user_name"
            android:textColor="@color/bg_edit_text"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/communicate_button"
            app:layout_constraintEnd_toEndOf="@+id/communicate_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/communicate_button" />

        <TextView
            android:id="@+id/user_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/telephone"
            android:textColor="@color/bg_edit_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/communicate_button"
            app:layout_constraintEnd_toEndOf="@+id/communicate_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/communicate_button"
            app:layout_constraintStart_toEndOf="@+id/user_name"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/telephone_icon" />

        <Button
            android:id="@+id/communicate_button"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:background="@drawable/button_start"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            android:text="@string/communicate_in_chat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/user_photo" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>