<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="310dp">

    <ImageView
        android:layout_width="25dp"
        android:layout_marginTop="10dp"
        android:layout_height="15dp"
        android:background="@drawable/down_arrow"
        android:scaleType="centerCrop"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/search_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Что ищем?"
        android:textColorHint="@color/white"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@drawable/bg_edit_text"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <RadioGroup
            android:id="@+id/request_group"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="50dp">

            <RadioButton
                android:id="@+id/only_lost"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:button="@drawable/sort_rounded"
                android:background="@drawable/type_selector"
                android:checked="false"
                android:text="@string/only_lost"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_height="match_parent" />

            <RadioButton
                android:id="@+id/all"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="All"
                android:button="@drawable/sort_rounded"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:checked="false"
                android:background="@drawable/type_selector"/>

            <RadioButton
                android:id="@+id/only_found"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/type_selector"
                android:textColor="@color/white"
                android:button="@drawable/sort_rounded"
                android:textSize="18sp"
                android:checked="false"
                android:text="@string/only_found"
                android:textAlignment="center"
                android:layout_weight="2"
                />


        </RadioGroup>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/categoty_group"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15sp"
        android:orientation="horizontal">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_type"
        android:textColor="@color/bg_edit_text"
        android:textAlignment="center"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:textSize="14sp"/>

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/documents"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:checked="false"
        android:background="@drawable/type_selector"
        android:scaleType="fitCenter"
        android:button="@drawable/document_icon" />

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/electronics"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:checked="false"
        android:background="@drawable/type_selector"
        android:scaleType="centerInside"
        android:button="@drawable/electronic_icon"
        android:buttonTintMode="add"/>

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/eat"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:background="@drawable/type_selector"
        android:button="@drawable/eat_icon"
        android:checked="false"
        android:scaleType="centerInside"
        android:layout_weight="1"/>

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/clothing"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:background="@drawable/type_selector"
        android:button="@drawable/clothing_icon"
        android:checked="false"
        android:scaleType="centerInside"
        android:layout_weight="1"/>

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/others"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:scaleType="centerInside"
        android:checked="false"
        android:layout_margin="5dp"
        android:background="@drawable/type_selector"
        android:button="@drawable/other_icno"
        android:layout_weight="1"/>

    </RadioGroup>

    <Button
        android:id="@+id/do_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_filter"
        android:textColor="@color/white"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_start"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@id/publish"
        android:layout_height="40dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:background="@drawable/right_arrow"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/swipe"
            android:layout_marginStart="10dp"
            android:scaleType="fitCenter"/>

        <TextView
            android:id="@+id/swipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:text="@string/create_request_swipe_right"
            android:textColor="@color/swipe" />

    </RelativeLayout>

</LinearLayout>