<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/rounded_field"
    android:id="@+id/mainRelative"
    android:layout_height="310dp">

    <ImageView
        android:id="@+id/close_fragment"
        android:layout_width="25dp"
        android:layout_marginTop="5dp"
        android:layout_height="15dp"
        android:background="@drawable/down_arrow"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/text_place"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/close_fragment"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:background="@drawable/request_gradient"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_above="@id/description"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/bg_edit_text_request"
            android:gravity="start|center"
            android:hint="@string/what_did_you_lose"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textAlignment="gravity"
            android:textColorHint="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintEnd_toStartOf="@+id/type"
            app:layout_constraintStart_toStartOf="@+id/description"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/type"
            android:layout_width="65dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/bg_edit_text_request"
            android:src="@drawable/down_arrow"
            android:text="Тип"
            android:textAlignment="gravity"
            android:gravity="top|center_horizontal"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintEnd_toEndOf="@+id/description"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/bg_edit_text_request"
            android:gravity="top"
            android:hint="@string/describe_lost"
            android:padding="10dp"
            android:textAlignment="gravity"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/request_image"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/request_image"
            app:layout_constraintVertical_bias="0.619" />

        <ImageButton
            android:id="@+id/request_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/image_placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/publish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publich_request"
        android:textColor="@color/white"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_below="@id/text_place"
        android:background="@drawable/button_start"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@id/publish"
        android:layout_height="40dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:background="@drawable/right_arrow"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/swipe"
            android:layout_marginStart="10dp"
            android:scaleType="fitCenter"/>

        <TextView
            android:id="@+id/swipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:text="@string/do_you_found"
            android:textColor="@color/swipe" />

    </RelativeLayout>

</RelativeLayout>
